# cadgmsh

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cadgmsh/: __init__.py  _extract.py  _mesh.py  _occ.py  _resolve.py  _types.py
tests/: conftest.py  test_extract.py  test_mesh.py  test_occ.py
